Implement multi-subject and incremental backup